fixed margin bottom, added time id to fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,18 @@ h1 {
   margin-bottom: 1rem;
 }
 
-.news {
+#news {
   display: inline-block;
   text-transform: uppercase;
   font-size: .85rem;
   border-bottom: 2px solid #ff3530;
 }
 
-#open {
+#time {
+  margin-bottom: 0;
+}
+
+.open {
   font-family:"Open Sans", sans-serif;
 }
 
